k8s/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name:  team-portfolio
spec:
  selector:
    app:  team-portfolio
  type:  NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  80
